libs/config/tests/errors/ce4_missing_semicolon/stdout.ansi
[0m[1m[38;5;9merror[CE4][0m[1m: property is missing a semicolon[0m
  [0m[36m┌─[0m source.hpp:1:17
  [0m[36m│[0m
[0m[36m1[0m [0m[36m│[0m outer = "nosemi"
  [0m[36m│[0m                 [0m[31m^[0m [0m[31mmissing semicolon[0m
  [0m[36m│[0m
  [0m[36m=[0m [33mhelp[0m: add a semicolon [33m;[0m to the end of the property


[0m[1m[38;5;9merror[CE4][0m[1m: property is missing a semicolon[0m
  [0m[36m┌─[0m source.hpp:3:21
  [0m[36m│[0m
[0m[36m3[0m [0m[36m│[0m     inner = "nosemi"
  [0m[36m│[0m                     [0m[31m^[0m [0m[31mmissing semicolon[0m
  [0m[36m│[0m
  [0m[36m=[0m [33mhelp[0m: add a semicolon [33m;[0m to the end of the property


[0m[1m[38;5;9merror[CE4][0m[1m: property is missing a semicolon[0m
  [0m[36m┌─[0m source.hpp:5:32
  [0m[36m│[0m
[0m[36m5[0m [0m[36m│[0m class inline { inner = "nosemi"[0m[31m [0m};
  [0m[36m│[0m                                [0m[31m^[0m [0m[31mmissing semicolon[0m
  [0m[36m│[0m
  [0m[36m=[0m [33mhelp[0m: add a semicolon [33m;[0m to the end of the property


[0m[1m[38;5;9merror[CE4][0m[1m: property is missing a semicolon[0m
  [0m[36m┌─[0m source.hpp:6:32
  [0m[36m│[0m
[0m[36m6[0m [0m[36m│[0m class inline2 {inner = "nosemi"[0m[31m}[0m;
  [0m[36m│[0m                                [0m[31m^[0m [0m[31mmissing semicolon[0m
  [0m[36m│[0m
  [0m[36m=[0m [33mhelp[0m: add a semicolon [33m;[0m to the end of the property

